<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ch.epfl.sweng.qeeqbii.activities.ShoppingListActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/shopping_list_n"
            android:textAllCaps="true"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:visibility="visible" />
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsingToolbarLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:toolbarId="@+id/toolbar">

    </android.support.design.widget.CollapsingToolbarLayout>

    <include layout="@layout/content_shopping_cart"
        android:id="@+id/include" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="showShoppingList"
        android:tint="@color/transparent"
        app:backgroundTint="@color/colorAccent"
        app:elevation="0dp"
        app:fabSize="normal"
        app:layout_anchor="@+id/collapsingToolbarLayout3"
        app:layout_anchorGravity="bottom|center_horizontal"
        app:rippleColor="@color/transparent"
        app:srcCompat="@drawable/add"
        tools:onClick="showShoppingList" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="scanToCheck"
        app:backgroundTint="@color/place_autocomplete_search_hint"
        app:elevation="0dp"
        app:layout_anchor="@+id/collapsingToolbarLayout3"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:onClick="scanToCheck" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="deleteSingleItem"
        app:backgroundTint="@color/errorColor"
        app:elevation="0dp"
        app:fabSize="normal"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="bottom|center_horizontal"
        app:rippleColor="@color/transparent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:onClick="deleteShoppingList" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="deleteShoppingList"
        app:backgroundTint="@color/place_autocomplete_search_hint"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="bottom|left"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:onClick="deleteShoppingList" />

</android.support.design.widget.CoordinatorLayout>